--- a/public/Mainpage.html
+++ b/public/Mainpage.html
@@ -79,6 +79,10 @@
                 <!-- HTML -->
 
                 <div id="chartdiv1"></div>
+                <div class="row center">
+                    <a class="btn-large waves-effect waves-light btn-my">수문 open</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="btn-large waves-effect waves-light btn-my">수문 Close</a>
+                </div>
                 <div id="chartdiv"></div>
 
             </div>
