--- a/public/Mainpage.html
+++ b/public/Mainpage.html
@@ -77,11 +77,18 @@
 
 
                 <!-- HTML -->
-
+                <div>
+                    <p class="center">땅습도</p>
+                </div>
                 <div id="chartdiv1"></div>
+
                 <div class="row center">
                     <a class="btn-large waves-effect waves-light btn-my">수문 open</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a class="btn-large waves-effect waves-light btn-my">수문 Close</a>
+                </div>
+                <br><br>
+                <div>
+                    <p class="center">대기습도</p>
                 </div>
                 <div id="chartdiv"></div>
 
@@ -131,12 +138,18 @@
 
     <!--  Scripts-->
     <script src="js/SetEquip.js"></script>
-    <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
+    <script src="https://www.amcharts.com/lib/3/amcharts.js">
+    </script>
     <script src="https://www.amcharts.com/lib/3/serial.js"></script>
     <script src="https://www.amcharts.com/lib/3/gauge.js"></script>
     <script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js"></script>
     <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
     <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-messaging.js"></script>
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
