--- a/public/Mainpage.html
+++ b/public/Mainpage.html
@@ -81,13 +81,28 @@
                     <p class="center" style="font-size: 23px;">땅습도</p>
                     <div id="chartdiv1"></div>
                 </div><br><br>
+                <div class="eqip_box_style">
+                    <p class="center" style="font-size: 23px;">공기중 습도</p>
+                    <div>
+                        <p id="AirHum" class="center" style="font-size: 50px">0%</p>
+                    </div>
+                </div><br><br>
+                 <div class="eqip_box_style">
+                    <p class="center" style="font-size: 23px;">수위</p>
+                    <div>
+                       <i id="EQIP_ICON" class="material-icons myicon">thumb_up</i>
+                        <p id="WAL" class="center" style="font-size: 50px">안전</p>
+                    </div>
+                </div><br><br>
 
 
                 <div class="row center">
-                    <div class="row center"><a id="BTN_OPEN" class="btn-large btn-my" style="float: left;margin-left: 50%;">수문 Open</a><div id="open_check" style="margin-left: 20px; border: solid; width: 50px; height: 50px; border-radius: 100%; border-color: black; padding-top: 10px;border-width: 5px;float: left">확인</div>
+                    <div class="row center"><a id="BTN_OPEN" class="btn-large btn-my mywidth">수문 Open</a>
+                    <div id="open_check" class="center checkEqip"><a class="black-text">확인</a></div>
                     </div>
-                    <div class="row center"><a id="BTN_CLOSE" class="btn-large  btn-my" style="float: left;margin-left: 50%">수문 Close</a>
-                    <div id="close_check" style="margin-left: 20px; border: solid; width: 50px; height: 50px; border-radius: 100%; border-color: black; padding-top: 10px;border-width: 5px;float: left">확인</div>
+                
+                    <div class="row center"><a id="BTN_CLOSE" class="btn-large  btn-my mywidth">수문 Close</a>
+                        <div id="close_check" class="center checkEqip"><a class="black-text">확인</a></div>
                     </div>
                 </div>
                 <br><br>
